# fides

./: COPYING  FORMAT  IDEA  Makefile  Makefile.am  TODO  configure.ac  fides.c  fides.cc
doc/: Doxyfile
lib/: Makefile.am  certificate.cc  certificate.h  fides.cc  fides.h  fides.pc.in  privatekey.cc  privatekey.h  publickey.cc  publickey.h  utility.cc  utility.h
src/: Makefile.am  fides.cc
