AC_INIT
AM_INIT_AUTOMAKE([fides], [0.1])
AC_PREREQ(2.61)
AC_COPYRIGHT([Copyright (c) 2008-2009 Guus Sliepen <guus@tinc-vpn.org>])
AC_REVISION($Revision$)
AC_CONFIG_SRCDIR(src/fides.cc)

AC_GNU_SOURCE

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES(BOTAN, botan-1.8 >= 1.8.0)
AC_SUBST(BOTAN_CFLAGS)
AC_SUBST(BOTAN_LIBS)

AC_CONFIG_FILES([Makefile lib/Makefile lib/fides.pc src/Makefile])
AC_OUTPUT
